--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 .how-to-use-section {
   background-color: #ffffff;
-  padding: 70px 20px 130px;
+  padding: 70px 20px 50px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   text-align: center;
+  height: 1000px;
 }
 
 .how-to-use-section h2 {
@@ -23,13 +24,13 @@
   justify-content: center;
   flex-direction: row;
   flex-grow: 1;
-  height: calc(50vh); /* Adjust this value based on your padding/header */
+  height: fit-content; /* Adjust this value based on your padding/header */
 }
 
+/* Consolidated .flex-box rules for animation and hover */
 .flex-box {
   background-color: #ffffff;
   color: #2b5876;
-  border: 5px solid #2b5876;
   flex: 1;
   padding: 40px;
   border-radius: 8px;
@@ -38,7 +39,15 @@
   align-items: center;
   justify-content: center;
   opacity: 0; /* Start hidden */
-  transition: all 0.5s ease-out;
+  transform: scale(1.5rem);
+  transition: transform 0.9s ease-in-out;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+}
+
+.flex-box:hover {
+  cursor: pointer;
+  transform: scale(1.03);
+  border: 1.5px solid #2b5876;
 }
 
 .how-to-use-section ol {
@@ -107,6 +116,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
+  height: 40px;
   background-color: #2b5876;
   display: flex;
   justify-content: space-between;
@@ -202,6 +212,8 @@ header {
     background-color: #ddd;
     color: #2b5876;
   }
+
+
   
   /* Responsive Styling */
 .menu-toggle {
@@ -209,8 +221,9 @@ header {
   font-size: 30px;
   color: white;
   cursor: pointer;
-  margin-left: 0;
-  padding: 10px 15px;
+  padding-top: 10px;
+  padding-bottom: 10px; 
+  padding-right: 30px;
 }
 
 .menu-toggle {
@@ -271,6 +284,10 @@ header {
       display: block;
       text-align: left;
       width: 100%;
+    }
+  
+    .flex-container .flex-box {
+      height: 350px !important;
     }
   }
 
@@ -340,7 +357,6 @@ header {
 
     .logo {
       height: 40px;
-      margin-bottom: 10px;
     }
 
     h1, h2 {
